test/langtools/tools/javac/valhalla/lworld-values/RefDefault/ProjectionInstantiationTest.out
ProjectionInstantiationTest.java:21:14: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: ProjectionInstantiationTest.RefDefault.val<java.lang.Object>, ProjectionInstantiationTest.ValDefault)
ProjectionInstantiationTest.java:24:9: compiler.err.projection.cant.be.instantiated
ProjectionInstantiationTest.java:25:9: compiler.err.projection.cant.be.instantiated
ProjectionInstantiationTest.java:26:9: compiler.err.projection.cant.be.instantiated
ProjectionInstantiationTest.java:27:9: compiler.err.projection.cant.be.instantiated
ProjectionInstantiationTest.java:34:23: compiler.err.projection.cant.be.instantiated
ProjectionInstantiationTest.java:35:23: compiler.err.projection.cant.be.instantiated
ProjectionInstantiationTest.java:36:23: compiler.err.projection.cant.be.instantiated
ProjectionInstantiationTest.java:37:23: compiler.err.projection.cant.be.instantiated
9 errors
